--- a/server/.env.example
+++ b/server/.env.example
@@ -1,2 +1,5 @@
-PORT: PORT
-SECRET: THE SECRET
+SERVER_PORT=Your server port
+SECRET=Your jwt secret
+DB_NAME=Your database name
+DB_USERNAME=Your database username
+DB_HOST=Your database host
